@@ -1,3 +1,7 @@
+Improvements :
+
+* Added IECoreMaya.DateTimeParameterHandler
+
 Cortex 6.3.1
 ============
 
